--- a/nm_path_analysis_testing.ipynb
+++ b/nm_path_analysis_testing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -49,22 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "'''\n",
-    "Simple mapping funcion to discreti\n",
+    "Simple mapping funcion \n",
     "'''\n",
-    "def simple_mapping(x):\n",
+    "def mapping_function(x):\n",
     "    return int(x/10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -79,25 +79,27 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 1-Trajectory class (analysis of continuos trajectories)\n",
+    "## 1- Ensemble class (analysis of continuos trajectories)\n",
+    "\n",
+    "Stores an esemble (array) of trajectories with extra functionalities. The ensemble could have a any number of trajectories including no trajectories at all.\n",
     "\n",
     "### Transition probabilities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "t = Trajectory(mc_trajectory)"
+    "my_ensemble = Ensemble(mc_trajectory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -106,28 +108,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 702.  271.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [ 270.  620.  287.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.  286.  568.  269.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.  268.  485.  246.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.  245.  500.  236.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.  235.  432.  218.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.  217.  498.  247.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.  246.  449.  236.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.  236.  475.  245.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.    0.  245.  767.]]\n"
+      "[[ 573.  199.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [ 199.  403.  234.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.  234.  462.  206.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.  206.  486.  241.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.  241.  455.  260.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.  260.  605.  293.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.  293.  509.  297.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.  297.  605.  295.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.  295.  546.  261.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.    0.  261.  783.]]\n"
      ]
     }
    ],
    "source": [
     "n_states = 10\n",
-    "C1 = t.count_matrix(n_states, simple_mapping)\n",
+    "C1 = my_ensemble._count_matrix(n_states, mapping_function)\n",
     "print(C1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -136,31 +138,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.72147996  0.27852004  0.          0.          0.          0.          0.\n",
+      "[[ 0.74222798  0.25777202  0.          0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.22939677  0.52676296  0.24384027  0.          0.          0.          0.\n",
+      " [ 0.23803828  0.48205742  0.27990431  0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.25467498  0.50578807  0.23953695  0.          0.          0.\n",
+      " [ 0.          0.2594235   0.51219512  0.22838137  0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.26826827  0.48548549  0.24624625  0.          0.\n",
+      " [ 0.          0.          0.22079314  0.52090032  0.25830654  0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.24974516  0.509684    0.24057085\n",
+      " [ 0.          0.          0.          0.25209205  0.47594142  0.27196653\n",
       "   0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.26553672  0.48813559\n",
-      "   0.24632768  0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.22557173\n",
-      "   0.51767152  0.25675676  0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.22452504  0.5224525\n",
+      "   0.25302245  0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.26660601\n",
+      "   0.46314832  0.27024568  0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.26423201  0.48227712  0.25349087  0.        ]\n",
+      "   0.2481203   0.50543024  0.24644946  0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.24686192  0.49686192  0.25627615]\n",
+      "   0.2676951   0.49546279  0.23684211]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.24209486  0.75790514]]\n"
+      "   0.          0.25        0.75      ]]\n"
      ]
     }
    ],
    "source": [
-    "K1 = t._mle_transition_matrix(n_states, simple_mapping)\n",
+    "K1 = my_ensemble._mle_transition_matrix(n_states, mapping_function)\n",
     "print(K1)"
    ]
   },
@@ -169,12 +171,12 @@
    "metadata": {},
    "source": [
     "### Defining states and computing MFPTs\n",
-    "The states are considered intervals in the continuous trajectory"
+    "The states are considered intervals in the is the class is Ensemble"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -182,13 +184,13 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 282.7894736842105,\n",
-       " 'mfptBA': 214.33333333333334,\n",
-       " 'std_err_mfptAB': 56.082427412945997,\n",
-       " 'std_err_mfptBA': 28.85393184153677}"
+       "{'mfptAB': 198.33333333333334,\n",
+       " 'mfptBA': 271.6190476190476,\n",
+       " 'std_err_mfptAB': 21.137636993212855,\n",
+       " 'std_err_mfptBA': 41.809386928427422}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +199,104 @@
     "stateA = [0,10]\n",
     "stateB = [90,100]\n",
     "\n",
-    "t.mfpts(stateA, stateB)"
+    "my_ensemble.mfpts(stateA, stateB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding more trajectories to the ensemble or (ensemble + ensemble)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "seq1 = mc_simulation(5000)\n",
+    "seq2 = mc_simulation(5000)\n",
+    "seq3 = mc_simulation(5000)\n",
+    "\n",
+    "my_e1 = Ensemble(seq1)\n",
+    "my_e2 = Ensemble(seq2)\n",
+    "my_e3 = Ensemble(seq3)\n",
+    "\n",
+    "ensemble1 = my_e1 + my_e2 + my_e3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mfptAB': 317.1666666666667,\n",
+       " 'mfptBA': 312.95454545454544,\n",
+       " 'std_err_mfptAB': 56.010095402856059,\n",
+       " 'std_err_mfptBA': 53.147365579764347}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stateA = [0,10]\n",
+    "stateB = [90,100]\n",
+    "ensemble1.mfpts(stateA,stateB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: No B->A events observed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'mfptAB': 2.5,\n",
+       " 'mfptBA': 'NaN',\n",
+       " 'std_err_mfptAB': 0.35355339059327373,\n",
+       " 'std_err_mfptBA': 'NaN'}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e1 = Ensemble([1,2,3,4])\n",
+    "e2 = Ensemble([2,3,4,5])\n",
+    "e3 = Ensemble([2,1,1,4])\n",
+    "\n",
+    "my_ensembles = [e1, e2, e3]\n",
+    "\n",
+    "ensemble_tot = Ensemble([])\n",
+    "\n",
+    "for traj in my_ensembles:\n",
+    "    ensemble_tot += traj\n",
+    "\n",
+    "ensemble_tot.sequence\n",
+    "ensemble_tot.mfpts([1,1],[4,4])"
    ]
   },
   {
@@ -207,25 +306,14 @@
    },
    "source": [
     "\n",
-    "## 2- DiscreteTrajectory class\n",
+    "## 2- DiscreteEnsemble class\n",
     "\n",
     "We can generate a discrete trajectory from the same mapping function and we should obtain exaclty the same result:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dtraj = DiscreteTrajectory.from_continuous_traj(mc_trajectory,simple_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -234,27 +322,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 702.  271.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [ 270.  620.  287.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.  286.  568.  269.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.  268.  485.  246.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.  245.  500.  236.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.  235.  432.  218.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.  217.  498.  247.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.  246.  449.  236.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.  236.  475.  245.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.    0.  245.  767.]]\n"
+      "[1 1 1 1 2 2 1 2 2 2 2 2 3 2 2 2 1 1 1 1 1 2 2 2 1 1 1 0 1 1 2 3 3 3 3 3 3\n",
+      " 2 2 2 2 1 2 1 0 0 0 1 0 0 1 1 2 1 1 1 0 1 1 2 2 3 3 4 4 5 5 6 7 7 7 6 5 5\n",
+      " 5 6 5 5 5 5 5 4 5 5 5 5 5 4 3 4 3 4 3 3 3 3 2 2 2 1 1 2 2 2 2 3 3 3 3 4 3\n",
+      " 4 4 4 4 3 3 3 4 5 6 6 6 7 7 6 6 6 6 5 6 5 6 7 7 7 7 7 7 6 7 8 7 6 7 7 8 8\n",
+      " 8 8 8 9 8 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 8 8 9 9 9 8 8 8 8 8 9 9 9\n",
+      " 9 9 9 9 9 9 8 8 8 9 8 8 7 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 10000)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "d_ens = DiscreteEnsemble.from_ensemble(mc_trajectory,mapping_function)\n",
+    "\n",
+    "print(d_ens.sequence[0][1:200])\n",
+    "d_ens.sequence.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 573.  199.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [ 199.  403.  234.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.  234.  462.  206.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.  206.  486.  241.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.  241.  455.  260.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.  260.  605.  293.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.  293.  509.  297.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.  297.  605.  295.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.  295.  546.  261.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.    0.  261.  783.]]\n"
      ]
     }
    ],
    "source": [
-    "C2 = dtraj.count_matrix(n_states)\n",
+    "C2 = d_ens._count_matrix(n_states)\n",
     "print(C2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -264,31 +390,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.72147996  0.27852004  0.          0.          0.          0.          0.\n",
+      "[[ 0.74222798  0.25777202  0.          0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.22939677  0.52676296  0.24384027  0.          0.          0.          0.\n",
+      " [ 0.23803828  0.48205742  0.27990431  0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.25467498  0.50578807  0.23953695  0.          0.          0.\n",
+      " [ 0.          0.2594235   0.51219512  0.22838137  0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.26826827  0.48548549  0.24624625  0.          0.\n",
+      " [ 0.          0.          0.22079314  0.52090032  0.25830654  0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.24974516  0.509684    0.24057085\n",
+      " [ 0.          0.          0.          0.25209205  0.47594142  0.27196653\n",
       "   0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.26553672  0.48813559\n",
-      "   0.24632768  0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.22557173\n",
-      "   0.51767152  0.25675676  0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.22452504  0.5224525\n",
+      "   0.25302245  0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.26660601\n",
+      "   0.46314832  0.27024568  0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.26423201  0.48227712  0.25349087  0.        ]\n",
+      "   0.2481203   0.50543024  0.24644946  0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.24686192  0.49686192  0.25627615]\n",
+      "   0.2676951   0.49546279  0.23684211]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.24209486  0.75790514]]\n"
+      "   0.          0.25        0.75      ]]\n"
      ]
     }
    ],
    "source": [
-    "K2= dtraj._mle_transition_matrix(n_states)\n",
+    "K2= d_ens._mle_transition_matrix(n_states)\n",
     "print(K2)"
    ]
   },
@@ -302,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -310,13 +436,13 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 282.7894736842105,\n",
-       " 'mfptBA': 214.33333333333334,\n",
-       " 'std_err_mfptAB': 56.082427412945997,\n",
-       " 'std_err_mfptBA': 28.85393184153677}"
+       "{'mfptAB': 198.33333333333334,\n",
+       " 'mfptBA': 271.6190476190476,\n",
+       " 'std_err_mfptAB': 21.137636993212855,\n",
+       " 'std_err_mfptBA': 41.809386928427422}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +451,7 @@
     "stateA = [0]\n",
     "stateB = [9]\n",
     "\n",
-    "dtraj.mfpts(stateA, stateB)"
+    "d_ens.mfpts(stateA, stateB)"
    ]
   },
   {
@@ -337,18 +463,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dtraj2 = DiscreteTrajectory.from_transition_matrix(K2,sim_length = 10000)"
+    "d_ens2 = DiscreteEnsemble.from_transition_matrix(K2, sim_length = 10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -356,19 +482,19 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 186.07692307692307,\n",
-       " 'mfptBA': 193.73076923076923,\n",
-       " 'std_err_mfptAB': 29.832963137722267,\n",
-       " 'std_err_mfptBA': 31.840465754204942}"
+       "{'mfptAB': 141.85714285714286,\n",
+       " 'mfptBA': 333.5238095238095,\n",
+       " 'std_err_mfptAB': 21.14653396968404,\n",
+       " 'std_err_mfptBA': 69.294848654878962}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dtraj2.mfpts(stateA,stateB)"
+    "d_ens2.mfpts(stateA,stateB)"
    ]
   },
   {
@@ -384,9 +510,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -398,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
