--- a/nm_path_analysis_testing.ipynb
+++ b/nm_path_analysis_testing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,12 +20,12 @@
     "import numpy as np\n",
     "\n",
     "from NMpathAnalysis.nmtools.interval import Interval\n",
-    "from src.trajectory import *"
+    "from src.ensemble import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -108,16 +108,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 573.  199.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [ 199.  403.  234.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.  234.  462.  206.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.  206.  486.  241.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.  241.  455.  260.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.  260.  605.  293.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.  293.  509.  297.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.  297.  605.  295.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.  295.  546.  261.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.    0.  261.  783.]]\n"
+      "[[ 623.  198.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [ 197.  439.  219.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.  218.  516.  258.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.  257.  572.  280.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.  279.  506.  251.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.  250.  480.  252.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.  252.  490.  262.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.  262.  509.  242.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.  242.  476.  267.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.    0.  267.  935.]]\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -138,26 +138,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.74222798  0.25777202  0.          0.          0.          0.          0.\n",
+      "[[ 0.75883069  0.24116931  0.          0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.23803828  0.48205742  0.27990431  0.          0.          0.          0.\n",
+      " [ 0.23040936  0.51345029  0.25614035  0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.2594235   0.51219512  0.22838137  0.          0.          0.\n",
+      " [ 0.          0.21975806  0.52016129  0.26008065  0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.22079314  0.52090032  0.25830654  0.          0.\n",
+      " [ 0.          0.          0.23174031  0.51577998  0.25247971  0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.25209205  0.47594142  0.27196653\n",
+      " [ 0.          0.          0.          0.26930502  0.48841699  0.24227799\n",
       "   0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.22452504  0.5224525\n",
-      "   0.25302245  0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.26660601\n",
-      "   0.46314832  0.27024568  0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.25458248  0.48879837\n",
+      "   0.25661914  0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.25099602\n",
+      "   0.48804781  0.26095618  0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.2481203   0.50543024  0.24644946  0.        ]\n",
+      "   0.25863771  0.50246792  0.23889437  0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.2676951   0.49546279  0.23684211]\n",
+      "   0.24568528  0.48324873  0.27106599]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.25        0.75      ]]\n"
+      "   0.          0.22212978  0.77787022]]\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -184,13 +184,13 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 198.33333333333334,\n",
-       " 'mfptBA': 271.6190476190476,\n",
-       " 'std_err_mfptAB': 21.137636993212855,\n",
-       " 'std_err_mfptBA': 41.809386928427422}"
+       "{'mfptAB': 299.6666666666667,\n",
+       " 'mfptBA': 337.6,\n",
+       " 'std_err_mfptAB': 76.553694542772703,\n",
+       " 'std_err_mfptBA': 66.343268937649825}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -238,13 +238,13 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 317.1666666666667,\n",
-       " 'mfptBA': 312.95454545454544,\n",
-       " 'std_err_mfptAB': 56.010095402856059,\n",
-       " 'std_err_mfptBA': 53.147365579764347}"
+       "{'mfptAB': 259.2,\n",
+       " 'mfptBA': 231.86666666666667,\n",
+       " 'std_err_mfptAB': 44.705465735932847,\n",
+       " 'std_err_mfptBA': 31.926225142535273}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +278,7 @@
        " 'std_err_mfptBA': 'NaN'}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -322,12 +322,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 1 2 2 1 2 2 2 2 2 3 2 2 2 1 1 1 1 1 2 2 2 1 1 1 0 1 1 2 3 3 3 3 3 3\n",
-      " 2 2 2 2 1 2 1 0 0 0 1 0 0 1 1 2 1 1 1 0 1 1 2 2 3 3 4 4 5 5 6 7 7 7 6 5 5\n",
-      " 5 6 5 5 5 5 5 4 5 5 5 5 5 4 3 4 3 4 3 3 3 3 2 2 2 1 1 2 2 2 2 3 3 3 3 4 3\n",
-      " 4 4 4 4 3 3 3 4 5 6 6 6 7 7 6 6 6 6 5 6 5 6 7 7 7 7 7 7 6 7 8 7 6 7 7 8 8\n",
-      " 8 8 8 9 8 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 9 8 8 9 9 9 8 8 8 8 8 9 9 9\n",
-      " 9 9 9 9 9 9 8 8 8 9 8 8 7 6]\n"
+      "[0 0 0 0 0 0 0 0 0 1 0 1 1 1 0 0 0 0 0 1 1 1 1 1 2 1 2 1 1 1 0 0 0 0 0 0 0\n",
+      " 0 0 0 1 1 2 3 2 2 2 2 2 3 2 1 2 2 1 1 2 2 2 2 3 3 4 3 3 3 2 3 3 4 3 3 3 3\n",
+      " 4 5 4 3 3 3 3 3 2 2 2 3 4 5 5 5 4 4 4 3 3 3 3 3 2 2 3 3 3 3 3 3 2 1 1 0 0\n",
+      " 0 1 1 0 0 0 0 1 2 2 2 1 2 1 2 1 2 2 2 2 3 3 2 2 3 2 2 2 3 2 1 1 2 2 2 3 4\n",
+      " 4 5 6 5 4 5 5 5 5 4 3 3 4 5 5 6 6 6 6 7 7 7 7 7 7 7 7 8 9 8 9 9 9 9 9 8 9\n",
+      " 9 8 9 8 8 7 7 6 5 4 4 3 3 3]\n"
      ]
     },
     {
@@ -336,7 +336,7 @@
        "(1, 10000)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -360,16 +360,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 573.  199.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [ 199.  403.  234.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.  234.  462.  206.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.  206.  486.  241.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.  241.  455.  260.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.  260.  605.  293.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.  293.  509.  297.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.  297.  605.  295.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.  295.  546.  261.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.    0.  261.  783.]]\n"
+      "[[ 623.  198.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [ 197.  439.  219.    0.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.  218.  516.  258.    0.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.  257.  572.  280.    0.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.  279.  506.  251.    0.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.  250.  480.  252.    0.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.  252.  490.  262.    0.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.  262.  509.  242.    0.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.  242.  476.  267.]\n",
+      " [   0.    0.    0.    0.    0.    0.    0.    0.  267.  935.]]\n"
      ]
     }
    ],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -390,26 +390,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.74222798  0.25777202  0.          0.          0.          0.          0.\n",
+      "[[ 0.75883069  0.24116931  0.          0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.23803828  0.48205742  0.27990431  0.          0.          0.          0.\n",
+      " [ 0.23040936  0.51345029  0.25614035  0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.2594235   0.51219512  0.22838137  0.          0.          0.\n",
+      " [ 0.          0.21975806  0.52016129  0.26008065  0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.22079314  0.52090032  0.25830654  0.          0.\n",
+      " [ 0.          0.          0.23174031  0.51577998  0.25247971  0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.25209205  0.47594142  0.27196653\n",
+      " [ 0.          0.          0.          0.26930502  0.48841699  0.24227799\n",
       "   0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.22452504  0.5224525\n",
-      "   0.25302245  0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.26660601\n",
-      "   0.46314832  0.27024568  0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.25458248  0.48879837\n",
+      "   0.25661914  0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.25099602\n",
+      "   0.48804781  0.26095618  0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.2481203   0.50543024  0.24644946  0.        ]\n",
+      "   0.25863771  0.50246792  0.23889437  0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.2676951   0.49546279  0.23684211]\n",
+      "   0.24568528  0.48324873  0.27106599]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.25        0.75      ]]\n"
+      "   0.          0.22212978  0.77787022]]\n"
      ]
     }
    ],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -436,13 +436,13 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 198.33333333333334,\n",
-       " 'mfptBA': 271.6190476190476,\n",
-       " 'std_err_mfptAB': 21.137636993212855,\n",
-       " 'std_err_mfptBA': 41.809386928427422}"
+       "{'mfptAB': 299.6666666666667,\n",
+       " 'mfptBA': 337.6,\n",
+       " 'std_err_mfptAB': 76.553694542772703,\n",
+       " 'std_err_mfptBA': 66.343268937649825}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -482,13 +482,13 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 141.85714285714286,\n",
-       " 'mfptBA': 333.5238095238095,\n",
-       " 'std_err_mfptAB': 21.14653396968404,\n",
-       " 'std_err_mfptBA': 69.294848654878962}"
+       "{'mfptAB': 146.3448275862069,\n",
+       " 'mfptBA': 203.39285714285714,\n",
+       " 'std_err_mfptAB': 24.823144998466823,\n",
+       " 'std_err_mfptBA': 28.605753456794378}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
