Added DiscretePathEnsemble, changed the __init__ in Ensemble, the ensembles are now lists of arrays, created check_shape

--- a/nm_path_analysis_testing.ipynb
+++ b/nm_path_analysis_testing.ipynb
@@ -40,7 +40,7 @@
     "    mc_traj = []\n",
     "    \n",
     "    for i in range(numsteps):\n",
-    "        dx = random.uniform(-10,10)\n",
+    "        dx = np.random.uniform(-10,10)\n",
     "        if (x + dx) in I:\n",
     "            x = x + dx\n",
     "        mc_traj.append(x)\n",
@@ -81,7 +81,7 @@
     "\n",
     "## 1- Ensemble class (analysis of continuos trajectories)\n",
     "\n",
-    "Stores an esemble (array) of trajectories with extra functionalities. The ensemble could have a any number of trajectories including no trajectories at all.\n",
+    "Stores an esemble (list) of trajectories (array) with extra functionalities. The ensemble could have a any number of trajectories including no trajectories at all.\n",
     "\n",
     "### Transition probabilities"
    ]
@@ -108,16 +108,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 623.  198.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [ 197.  439.  219.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.  218.  516.  258.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.  257.  572.  280.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.  279.  506.  251.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.  250.  480.  252.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.  252.  490.  262.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.  262.  509.  242.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.  242.  476.  267.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.    0.  267.  935.]]\n"
+      "[[ 1016.   313.     0.     0.     0.     0.     0.     0.     0.     0.]\n",
+      " [  312.   510.   284.     0.     0.     0.     0.     0.     0.     0.]\n",
+      " [    0.   283.   596.   261.     0.     0.     0.     0.     0.     0.]\n",
+      " [    0.     0.   260.   449.   239.     0.     0.     0.     0.     0.]\n",
+      " [    0.     0.     0.   238.   482.   224.     0.     0.     0.     0.]\n",
+      " [    0.     0.     0.     0.   223.   469.   254.     0.     0.     0.]\n",
+      " [    0.     0.     0.     0.     0.   254.   480.   250.     0.     0.]\n",
+      " [    0.     0.     0.     0.     0.     0.   250.   473.   220.     0.]\n",
+      " [    0.     0.     0.     0.     0.     0.     0.   220.   407.   208.]\n",
+      " [    0.     0.     0.     0.     0.     0.     0.     0.   208.   616.]]\n"
      ]
     }
    ],
@@ -138,26 +138,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.75883069  0.24116931  0.          0.          0.          0.          0.\n",
+      "[[ 0.76448457  0.23551543  0.          0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.23040936  0.51345029  0.25614035  0.          0.          0.          0.\n",
+      " [ 0.28209765  0.46112116  0.25678119  0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.21975806  0.52016129  0.26008065  0.          0.          0.\n",
+      " [ 0.          0.24824561  0.52280702  0.22894737  0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.23174031  0.51577998  0.25247971  0.          0.\n",
+      " [ 0.          0.          0.2742616   0.47362869  0.2521097   0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.26930502  0.48841699  0.24227799\n",
+      " [ 0.          0.          0.          0.25211864  0.51059322  0.23728814\n",
       "   0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.25458248  0.48879837\n",
-      "   0.25661914  0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.25099602\n",
-      "   0.48804781  0.26095618  0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.23572939  0.49577167\n",
+      "   0.26849894  0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.25813008\n",
+      "   0.48780488  0.25406504  0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.25863771  0.50246792  0.23889437  0.        ]\n",
+      "   0.26511135  0.50159067  0.23329799  0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.24568528  0.48324873  0.27106599]\n",
+      "   0.26347305  0.48742515  0.2491018 ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.22212978  0.77787022]]\n"
+      "   0.          0.25242718  0.74757282]]\n"
      ]
     }
    ],
@@ -184,10 +184,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 299.6666666666667,\n",
-       " 'mfptBA': 337.6,\n",
-       " 'std_err_mfptAB': 76.553694542772703,\n",
-       " 'std_err_mfptBA': 66.343268937649825}"
+       "{'mfptAB': 309.94444444444446,\n",
+       " 'mfptBA': 221.38888888888889,\n",
+       " 'std_err_mfptAB': 46.121717135154448,\n",
+       " 'std_err_mfptBA': 22.117829644949747}"
       ]
      },
      "execution_count": 8,
@@ -238,10 +238,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 259.2,\n",
-       " 'mfptBA': 231.86666666666667,\n",
-       " 'std_err_mfptAB': 44.705465735932847,\n",
-       " 'std_err_mfptBA': 31.926225142535273}"
+       "{'mfptAB': 239.85714285714286,\n",
+       " 'mfptBA': 279.10714285714283,\n",
+       " 'std_err_mfptAB': 34.784860442942488,\n",
+       " 'std_err_mfptBA': 38.30104767861949}"
       ]
      },
      "execution_count": 10,
@@ -295,7 +295,7 @@
     "for traj in my_ensembles:\n",
     "    ensemble_tot += traj\n",
     "\n",
-    "ensemble_tot.sequence\n",
+    "ensemble_tot.trajectories\n",
     "ensemble_tot.mfpts([1,1],[4,4])"
    ]
   },
@@ -322,12 +322,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 0 0 0 0 0 0 1 0 1 1 1 0 0 0 0 0 1 1 1 1 1 2 1 2 1 1 1 0 0 0 0 0 0 0\n",
-      " 0 0 0 1 1 2 3 2 2 2 2 2 3 2 1 2 2 1 1 2 2 2 2 3 3 4 3 3 3 2 3 3 4 3 3 3 3\n",
-      " 4 5 4 3 3 3 3 3 2 2 2 3 4 5 5 5 4 4 4 3 3 3 3 3 2 2 3 3 3 3 3 3 2 1 1 0 0\n",
-      " 0 1 1 0 0 0 0 1 2 2 2 1 2 1 2 1 2 2 2 2 3 3 2 2 3 2 2 2 3 2 1 1 2 2 2 3 4\n",
-      " 4 5 6 5 4 5 5 5 5 4 3 3 4 5 5 6 6 6 6 7 7 7 7 7 7 7 7 8 9 8 9 9 9 9 9 8 9\n",
-      " 9 8 9 8 8 7 7 6 5 4 4 3 3 3]\n"
+      "[0 1 1 0 0 0 0 0 1 0 1 2 2 2 2 2 3 4 3 2 2 3 2 3 2 2 2 2 1 1 1 1 2 2 3 2 2\n",
+      " 2 3 4 4 5 4 5 4 4 5 5 5 5 5 4 5 5 4 5 6 6 6 7 7 8 7 8 8 8 7 7 7 6 6 6 7 6\n",
+      " 7 8 7 6 6 5 6 6 6 6 5 6 5 6 6 6 6 6 7 6 5 5 4 4 4 5 4 5 5 4 4 3 4 4 5 5 5\n",
+      " 5 5 4 3 3 3 3 2 3 2 2 2 1 2 1 2 2 2 2 3 3 3 3 3 3 2 2 3 3 3 3 4 4 3 3 4 4\n",
+      " 3 3 3 2 3 2 1 2 1 2 1 1 1 1 1 1 2 3 2 2 2 1 2 1 1 1 2 1 2 2 1 2 2 2 2 2 1\n",
+      " 1 0 0 0 1 0 0 0 0 1 2 1 0 0]\n"
      ]
     },
     {
@@ -345,8 +345,8 @@
     "\n",
     "d_ens = DiscreteEnsemble.from_ensemble(mc_trajectory,mapping_function)\n",
     "\n",
-    "print(d_ens.sequence[0][1:200])\n",
-    "d_ens.sequence.shape"
+    "print(d_ens.trajectories[0][1:200])\n",
+    "np.array(d_ens.trajectories).shape"
    ]
   },
   {
@@ -360,16 +360,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 623.  198.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [ 197.  439.  219.    0.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.  218.  516.  258.    0.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.  257.  572.  280.    0.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.  279.  506.  251.    0.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.  250.  480.  252.    0.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.  252.  490.  262.    0.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.  262.  509.  242.    0.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.  242.  476.  267.]\n",
-      " [   0.    0.    0.    0.    0.    0.    0.    0.  267.  935.]]\n"
+      "[[ 1016.   313.     0.     0.     0.     0.     0.     0.     0.     0.]\n",
+      " [  312.   510.   284.     0.     0.     0.     0.     0.     0.     0.]\n",
+      " [    0.   283.   596.   261.     0.     0.     0.     0.     0.     0.]\n",
+      " [    0.     0.   260.   449.   239.     0.     0.     0.     0.     0.]\n",
+      " [    0.     0.     0.   238.   482.   224.     0.     0.     0.     0.]\n",
+      " [    0.     0.     0.     0.   223.   469.   254.     0.     0.     0.]\n",
+      " [    0.     0.     0.     0.     0.   254.   480.   250.     0.     0.]\n",
+      " [    0.     0.     0.     0.     0.     0.   250.   473.   220.     0.]\n",
+      " [    0.     0.     0.     0.     0.     0.     0.   220.   407.   208.]\n",
+      " [    0.     0.     0.     0.     0.     0.     0.     0.   208.   616.]]\n"
      ]
     }
    ],
@@ -390,26 +390,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.75883069  0.24116931  0.          0.          0.          0.          0.\n",
+      "[[ 0.76448457  0.23551543  0.          0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.23040936  0.51345029  0.25614035  0.          0.          0.          0.\n",
+      " [ 0.28209765  0.46112116  0.25678119  0.          0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.21975806  0.52016129  0.26008065  0.          0.          0.\n",
+      " [ 0.          0.24824561  0.52280702  0.22894737  0.          0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.23174031  0.51577998  0.25247971  0.          0.\n",
+      " [ 0.          0.          0.2742616   0.47362869  0.2521097   0.          0.\n",
       "   0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.26930502  0.48841699  0.24227799\n",
+      " [ 0.          0.          0.          0.25211864  0.51059322  0.23728814\n",
       "   0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.25458248  0.48879837\n",
-      "   0.25661914  0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.25099602\n",
-      "   0.48804781  0.26095618  0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.23572939  0.49577167\n",
+      "   0.26849894  0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.25813008\n",
+      "   0.48780488  0.25406504  0.          0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.\n",
-      "   0.25863771  0.50246792  0.23889437  0.        ]\n",
+      "   0.26511135  0.50159067  0.23329799  0.        ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.24568528  0.48324873  0.27106599]\n",
+      "   0.26347305  0.48742515  0.2491018 ]\n",
       " [ 0.          0.          0.          0.          0.          0.          0.\n",
-      "   0.          0.22212978  0.77787022]]\n"
+      "   0.          0.25242718  0.74757282]]\n"
      ]
     }
    ],
@@ -436,10 +436,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 299.6666666666667,\n",
-       " 'mfptBA': 337.6,\n",
-       " 'std_err_mfptAB': 76.553694542772703,\n",
-       " 'std_err_mfptBA': 66.343268937649825}"
+       "{'mfptAB': 309.94444444444446,\n",
+       " 'mfptBA': 221.38888888888889,\n",
+       " 'std_err_mfptAB': 46.121717135154448,\n",
+       " 'std_err_mfptBA': 22.117829644949747}"
       ]
      },
      "execution_count": 15,
@@ -465,7 +465,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -482,10 +482,10 @@
     {
      "data": {
       "text/plain": [
-       "{'mfptAB': 146.3448275862069,\n",
-       " 'mfptBA': 203.39285714285714,\n",
-       " 'std_err_mfptAB': 24.823144998466823,\n",
-       " 'std_err_mfptBA': 28.605753456794378}"
+       "{'mfptAB': 182.90625,\n",
+       " 'mfptBA': 133.2258064516129,\n",
+       " 'std_err_mfptAB': 25.483157710619317,\n",
+       " 'std_err_mfptBA': 18.420948446819274}"
       ]
      },
      "execution_count": 17,
@@ -495,6 +495,17 @@
    ],
    "source": [
     "d_ens2.mfpts(stateA,stateB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pathEnsemble = DiscretePathEnsemble.from_transition_matrix(K2,stateA, stateB, n_paths = 10,ini_pops = [1])"
    ]
   },
   {
