--- a/test/Chignoling_mfpts_after_clustering.ipynb
+++ b/test/Chignoling_mfpts_after_clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chignolin clustering based on MFPT\n",
+    "# Chignolin MFPTs after clustering\n",
     "This is a modification of the notebook given Chris (christoph.wehmeyer@fu-berlin.de), in this case we are going to use is to cluster the microstates based on the commute times."
    ]
   },
